--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,6 +18,14 @@ services:
       - .env
     depends_on:
       - db
+  nginx:
+    build: configurations/nginx/nginx
+    ports:
+      - "80:80"
+      - "443:443"
+    restart: always
+    depends_on:
+      - web
 
 volumes:
   postgres-data:
